--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,13 @@ networkx
 pyvis
 lxml
 bs4
-numpy
+numpy==1.19.5
 st-annotated-text
 matplotlib
 openpyxl
-gensim
+gensim==4.0.1
 streamlit-image-select
 node2vec
 markdown
 scikit-learn
-scipy <= 1.13
+scipy==1.10.1
