--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-python==3.8.5
 distutils
 pandas
 streamlit-aggrid
@@ -6,13 +5,13 @@ networkx
 pyvis
 lxml
 bs4
-numpy==1.19.5
+numpy
 st-annotated-text
 matplotlib
 openpyxl
-gensim==4.0.1
+gensim
 streamlit-image-select
 node2vec
 markdown
 scikit-learn
-scipy==1.10.1
+scipy<1.13
